src/components/Todos/todos.scss
$color-todos: #f9c22e;
$color-red: #F15946;
$ease: .25s ease;

.container_todos {
  .todo_form {
    margin: 32px 0 0;
  }

  .todo_loader {
    width: 20px;
    height: auto;
    margin: 0 0 0 16px;
    vertical-align: middle;
  }

  [type="text"] {
    width: 100%;
    border-bottom: 1px solid #ccc;
    border-radius: 0;
  }

  .todo_btn_icon {
    padding: 0 6px;
    cursor: pointer;

    svg {
      width: 24px;
      height: 24px;
      margin-top: -3px;
      stroke: #ccc; 
      transition: $ease;
      vertical-align: middle;
    }

    &:hover svg {
      stroke: $color-red;
    }

    @media screen and (min-width: 768px) {
      padding: 0 4px;

      svg {
        width: 18px;
        height: 18px;
      }
    }
  }

  .todo_items_wrap {
    position: relative;
    overflow: hidden;

    .todo_overlay {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background: rgba(#fff, .6);
      z-index: 1000;
    }
  }

  .todo_item {
    display: flex;
    cursor: pointer;
    margin: 0 0 8px;

    label {
      margin-right: auto;
      font-size: 1.5rem;
      word-break: break-all;
    }
  
    form {
      display: inline-block;
      min-width: 80%;
    }

    [type="text"] {
      border-bottom-color: $color-red;
    }

    [type="checkbox"] {
      position: absolute;
      width: 1px;
      height: 1px;
      margin: -1px;
      padding: 0;
      border: 0;
      overflow: hidden;
      clip: rect(0, 0, 0, 0);

      & + label {
        position: relative;
        display: inline-block;
        padding-left: 24px;
        cursor: pointer;

        &:before {
          position: absolute;
          top: calc(50% - 8px);
          left: 0;
          content: '';
          display: block;
          width: 16px;
          height: 16px;
          background: #fef6e0;
          border-radius: 4px;
        }
      }

      &:checked + label {
        color: #ccc;
      }

      &:checked + label:after {
        position: absolute;
        top: calc(50% - 8px);
        left: 5px;
        content: '';
        display: block;
        width: 7px;
        height: 14px;
        transform: rotate(40deg);
        border-bottom: 3px solid $color-todos;
        border-right: 3px solid $color-todos;
      }
    }
  
    @media screen and (min-width: 768px) {
      label {
        margin-right: 16px;
      }
    }
  }
}

